examples/good/rargs.lk
void f(int & x, int y) {
        x++;
        y++;
}

int main() {
        int n = 0;
        int k = 0;
        f(n, k);
        print(n);
        print(k);
}