examples/bad/division_by_zero.lk
int f() {
    int n = 10;
    int k = 0;
        return n/k;
}

int main() {
    int c = f();
}